src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones FUNC MAIN '(' ')' VOID '{' sentenciasCuerpo '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : defFuncion
   5             | defVariable

   6  defFuncion : FUNC IDENTIFICADOR tipoFuncion '{' sentenciasCuerpo '}'

   7  tipoFuncion : '(' parametrosFuncion ')' tipoRetorno

   8  tipoRetorno : INT
   9              | FLOAT32
  10              | CHAR
  11              | VOID

  12  parametrosFuncion : parametros
  13                    |

  14  parametros : parametro
  15             | parametros ',' parametro

  16  parametro : IDENTIFICADOR tipoSimples

  17  defVariablesLocales : defVariablesLocales defVariable
  18                      |

  19  defVariable : VAR identificadores tipo ';'

  20  identificadores : IDENTIFICADOR
  21                  | identificadores ',' IDENTIFICADOR

  22  sentenciasCuerpo : defVariablesLocales sentencias

  23  sentencias : sentencias sentencia
  24             |

  25  sentencia : write
  26            | read
  27            | return
  28            | if
  29            | while
  30            | asignacion
  31            | procedimiento

  32  write : WRITE '(' expresiones ')' ';'

  33  read : READ '(' expresiones ')' ';'

  34  return : RETURN expresion ';'

  35  if : IF expresion '{' sentencias '}' ELSE '{' sentencias '}'
  36     | IF expresion '{' sentencias '}'

  37  while : WHILE expresion '{' sentencias '}'

  38  asignacion : expresion '=' expresion ';'

  39  procedimiento : IDENTIFICADOR '(' expresionesInvocacion ')' ';'

  40  funcionExpresion : IDENTIFICADOR '(' expresionesInvocacion ')'

  41  expresionesInvocacion : expresiones
  42                        |

  43  expresiones : expresion
  44              | expresiones ',' expresion

  45  expresion : expresion '+' expresion
  46            | expresion '-' expresion
  47            | expresion '*' expresion
  48            | expresion '/' expresion
  49            | '(' expresion ')'
  50            | expresion '[' expresion ']'
  51            | expresion '.' IDENTIFICADOR
  52            | IDENTIFICADOR
  53            | '-' expresion
  54            | '!' expresion
  55            | expresion '%' expresion
  56            | expresion '>' expresion
  57            | expresion '<' expresion
  58            | expresion MAYORIGUAL expresion
  59            | expresion MENORIGUAL expresion
  60            | expresion DISTINTO expresion
  61            | expresion IGUALDAD expresion
  62            | expresion AND expresion
  63            | expresion OR expresion
  64            | tipoSimples '(' expresion ')'
  65            | CTE_ENTERA
  66            | CTE_REAL
  67            | CHAR
  68            | funcionExpresion

  69  tipoSimples : CHAR
  70              | INT
  71              | FLOAT32

  72  tipo : CHAR
  73       | FLOAT32
  74       | INT
  75       | '[' CTE_ENTERA ']' tipo
  76       | STRUCT '{' campos '}'

  77  campos : campo
  78         | campos campo

  79  campo : identificadores tipo ';'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . FUNC MAIN '(' ')' VOID '{' sentenciasCuerpo '}'  (1)
	definiciones : definiciones . definicion  (2)

	VAR  shift 3
	FUNC  shift 4
	.  error

	definicion  goto 5
	defFuncion  goto 6
	defVariable  goto 7


state 3
	defVariable : VAR . identificadores tipo ';'  (19)

	IDENTIFICADOR  shift 8
	.  error

	identificadores  goto 9


state 4
	programa : definiciones FUNC . MAIN '(' ')' VOID '{' sentenciasCuerpo '}'  (1)
	defFuncion : FUNC . IDENTIFICADOR tipoFuncion '{' sentenciasCuerpo '}'  (6)

	MAIN  shift 10
	IDENTIFICADOR  shift 11
	.  error


state 5
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 6
	definicion : defFuncion .  (4)

	.  reduce 4


state 7
	definicion : defVariable .  (5)

	.  reduce 5


state 8
	identificadores : IDENTIFICADOR .  (20)

	.  reduce 20


state 9
	defVariable : VAR identificadores . tipo ';'  (19)
	identificadores : identificadores . ',' IDENTIFICADOR  (21)

	STRUCT  shift 12
	CHAR  shift 13
	INT  shift 14
	FLOAT32  shift 15
	'['  shift 16
	','  shift 17
	.  error

	tipo  goto 18


state 10
	programa : definiciones FUNC MAIN . '(' ')' VOID '{' sentenciasCuerpo '}'  (1)

	'('  shift 19
	.  error


state 11
	defFuncion : FUNC IDENTIFICADOR . tipoFuncion '{' sentenciasCuerpo '}'  (6)

	'('  shift 20
	.  error

	tipoFuncion  goto 21


state 12
	tipo : STRUCT . '{' campos '}'  (76)

	'{'  shift 22
	.  error


state 13
	tipo : CHAR .  (72)

	.  reduce 72


state 14
	tipo : INT .  (74)

	.  reduce 74


state 15
	tipo : FLOAT32 .  (73)

	.  reduce 73


state 16
	tipo : '[' . CTE_ENTERA ']' tipo  (75)

	CTE_ENTERA  shift 23
	.  error


state 17
	identificadores : identificadores ',' . IDENTIFICADOR  (21)

	IDENTIFICADOR  shift 24
	.  error


state 18
	defVariable : VAR identificadores tipo . ';'  (19)

	';'  shift 25
	.  error


state 19
	programa : definiciones FUNC MAIN '(' . ')' VOID '{' sentenciasCuerpo '}'  (1)

	')'  shift 26
	.  error


state 20
	tipoFuncion : '(' . parametrosFuncion ')' tipoRetorno  (7)
	parametrosFuncion : .  (13)

	IDENTIFICADOR  shift 27
	')'  reduce 13

	parametrosFuncion  goto 28
	parametros  goto 29
	parametro  goto 30


state 21
	defFuncion : FUNC IDENTIFICADOR tipoFuncion . '{' sentenciasCuerpo '}'  (6)

	'{'  shift 31
	.  error


state 22
	tipo : STRUCT '{' . campos '}'  (76)

	IDENTIFICADOR  shift 8
	.  error

	identificadores  goto 32
	campos  goto 33
	campo  goto 34


state 23
	tipo : '[' CTE_ENTERA . ']' tipo  (75)

	']'  shift 35
	.  error


state 24
	identificadores : identificadores ',' IDENTIFICADOR .  (21)

	.  reduce 21


state 25
	defVariable : VAR identificadores tipo ';' .  (19)

	.  reduce 19


state 26
	programa : definiciones FUNC MAIN '(' ')' . VOID '{' sentenciasCuerpo '}'  (1)

	VOID  shift 36
	.  error


state 27
	parametro : IDENTIFICADOR . tipoSimples  (16)

	CHAR  shift 37
	INT  shift 38
	FLOAT32  shift 39
	.  error

	tipoSimples  goto 40


state 28
	tipoFuncion : '(' parametrosFuncion . ')' tipoRetorno  (7)

	')'  shift 41
	.  error


state 29
	parametrosFuncion : parametros .  (12)
	parametros : parametros . ',' parametro  (15)

	','  shift 42
	')'  reduce 12


state 30
	parametros : parametro .  (14)

	.  reduce 14


state 31
	defFuncion : FUNC IDENTIFICADOR tipoFuncion '{' . sentenciasCuerpo '}'  (6)
	defVariablesLocales : .  (18)

	.  reduce 18

	sentenciasCuerpo  goto 43
	defVariablesLocales  goto 44


state 32
	identificadores : identificadores . ',' IDENTIFICADOR  (21)
	campo : identificadores . tipo ';'  (79)

	STRUCT  shift 12
	CHAR  shift 13
	INT  shift 14
	FLOAT32  shift 15
	'['  shift 16
	','  shift 17
	.  error

	tipo  goto 45


state 33
	tipo : STRUCT '{' campos . '}'  (76)
	campos : campos . campo  (78)

	IDENTIFICADOR  shift 8
	'}'  shift 46
	.  error

	identificadores  goto 32
	campo  goto 47


state 34
	campos : campo .  (77)

	.  reduce 77


state 35
	tipo : '[' CTE_ENTERA ']' . tipo  (75)

	STRUCT  shift 12
	CHAR  shift 13
	INT  shift 14
	FLOAT32  shift 15
	'['  shift 16
	.  error

	tipo  goto 48


state 36
	programa : definiciones FUNC MAIN '(' ')' VOID . '{' sentenciasCuerpo '}'  (1)

	'{'  shift 49
	.  error


state 37
	tipoSimples : CHAR .  (69)

	.  reduce 69


state 38
	tipoSimples : INT .  (70)

	.  reduce 70


state 39
	tipoSimples : FLOAT32 .  (71)

	.  reduce 71


state 40
	parametro : IDENTIFICADOR tipoSimples .  (16)

	.  reduce 16


state 41
	tipoFuncion : '(' parametrosFuncion ')' . tipoRetorno  (7)

	CHAR  shift 50
	VOID  shift 51
	INT  shift 52
	FLOAT32  shift 53
	.  error

	tipoRetorno  goto 54


state 42
	parametros : parametros ',' . parametro  (15)

	IDENTIFICADOR  shift 27
	.  error

	parametro  goto 55


state 43
	defFuncion : FUNC IDENTIFICADOR tipoFuncion '{' sentenciasCuerpo . '}'  (6)

	'}'  shift 56
	.  error


state 44
	defVariablesLocales : defVariablesLocales . defVariable  (17)
	sentenciasCuerpo : defVariablesLocales . sentencias  (22)
	sentencias : .  (24)

	VAR  shift 3
	CTE_ENTERA  reduce 24
	WRITE  reduce 24
	CHAR  reduce 24
	CTE_REAL  reduce 24
	READ  reduce 24
	WHILE  reduce 24
	IDENTIFICADOR  reduce 24
	INT  reduce 24
	RETURN  reduce 24
	FLOAT32  reduce 24
	IF  reduce 24
	'-'  reduce 24
	'!'  reduce 24
	'('  reduce 24
	'}'  reduce 24

	defVariable  goto 57
	sentencias  goto 58


state 45
	campo : identificadores tipo . ';'  (79)

	';'  shift 59
	.  error


state 46
	tipo : STRUCT '{' campos '}' .  (76)

	.  reduce 76


state 47
	campos : campos campo .  (78)

	.  reduce 78


state 48
	tipo : '[' CTE_ENTERA ']' tipo .  (75)

	.  reduce 75


state 49
	programa : definiciones FUNC MAIN '(' ')' VOID '{' . sentenciasCuerpo '}'  (1)
	defVariablesLocales : .  (18)

	.  reduce 18

	sentenciasCuerpo  goto 60
	defVariablesLocales  goto 44


state 50
	tipoRetorno : CHAR .  (10)

	.  reduce 10


state 51
	tipoRetorno : VOID .  (11)

	.  reduce 11


state 52
	tipoRetorno : INT .  (8)

	.  reduce 8


state 53
	tipoRetorno : FLOAT32 .  (9)

	.  reduce 9


state 54
	tipoFuncion : '(' parametrosFuncion ')' tipoRetorno .  (7)

	.  reduce 7


state 55
	parametros : parametros ',' parametro .  (15)

	.  reduce 15


state 56
	defFuncion : FUNC IDENTIFICADOR tipoFuncion '{' sentenciasCuerpo '}' .  (6)

	.  reduce 6


state 57
	defVariablesLocales : defVariablesLocales defVariable .  (17)

	.  reduce 17


state 58
	sentenciasCuerpo : defVariablesLocales sentencias .  (22)
	sentencias : sentencias . sentencia  (23)

	CTE_ENTERA  shift 61
	WRITE  shift 62
	CHAR  shift 63
	CTE_REAL  shift 64
	READ  shift 65
	WHILE  shift 66
	IDENTIFICADOR  shift 67
	INT  shift 38
	RETURN  shift 68
	FLOAT32  shift 39
	IF  shift 69
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	'}'  reduce 22

	tipoSimples  goto 73
	sentencia  goto 74
	write  goto 75
	read  goto 76
	return  goto 77
	if  goto 78
	while  goto 79
	asignacion  goto 80
	procedimiento  goto 81
	expresion  goto 82
	funcionExpresion  goto 83


state 59
	campo : identificadores tipo ';' .  (79)

	.  reduce 79


state 60
	programa : definiciones FUNC MAIN '(' ')' VOID '{' sentenciasCuerpo . '}'  (1)

	'}'  shift 84
	.  error


state 61
	expresion : CTE_ENTERA .  (65)

	.  reduce 65


state 62
	write : WRITE . '(' expresiones ')' ';'  (32)

	'('  shift 85
	.  error


state 63
	expresion : CHAR .  (67)
	tipoSimples : CHAR .  (69)

	AND  reduce 67
	MAYORIGUAL  reduce 67
	IGUALDAD  reduce 67
	DISTINTO  reduce 67
	OR  reduce 67
	MENORIGUAL  reduce 67
	'='  reduce 67
	'<'  reduce 67
	'>'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'/'  reduce 67
	'*'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	']'  reduce 67
	'.'  reduce 67
	'('  reduce 69
	')'  reduce 67
	'{'  reduce 67
	','  reduce 67
	';'  reduce 67


state 64
	expresion : CTE_REAL .  (66)

	.  reduce 66


state 65
	read : READ . '(' expresiones ')' ';'  (33)

	'('  shift 86
	.  error


state 66
	while : WHILE . expresion '{' sentencias '}'  (37)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 88
	funcionExpresion  goto 83


state 67
	procedimiento : IDENTIFICADOR . '(' expresionesInvocacion ')' ';'  (39)
	funcionExpresion : IDENTIFICADOR . '(' expresionesInvocacion ')'  (40)
	expresion : IDENTIFICADOR .  (52)

	'('  shift 89
	AND  reduce 52
	MAYORIGUAL  reduce 52
	IGUALDAD  reduce 52
	DISTINTO  reduce 52
	OR  reduce 52
	MENORIGUAL  reduce 52
	'='  reduce 52
	'<'  reduce 52
	'>'  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'/'  reduce 52
	'*'  reduce 52
	'%'  reduce 52
	'['  reduce 52
	'.'  reduce 52


state 68
	return : RETURN . expresion ';'  (34)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 90
	funcionExpresion  goto 83


state 69
	if : IF . expresion '{' sentencias '}' ELSE '{' sentencias '}'  (35)
	if : IF . expresion '{' sentencias '}'  (36)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 91
	funcionExpresion  goto 83


state 70
	expresion : '-' . expresion  (53)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 92
	funcionExpresion  goto 83


state 71
	expresion : '!' . expresion  (54)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 93
	funcionExpresion  goto 83


state 72
	expresion : '(' . expresion ')'  (49)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresion  goto 94
	funcionExpresion  goto 83


state 73
	expresion : tipoSimples . '(' expresion ')'  (64)

	'('  shift 95
	.  error


state 74
	sentencias : sentencias sentencia .  (23)

	.  reduce 23


state 75
	sentencia : write .  (25)

	.  reduce 25


state 76
	sentencia : read .  (26)

	.  reduce 26


state 77
	sentencia : return .  (27)

	.  reduce 27


state 78
	sentencia : if .  (28)

	.  reduce 28


state 79
	sentencia : while .  (29)

	.  reduce 29


state 80
	sentencia : asignacion .  (30)

	.  reduce 30


state 81
	sentencia : procedimiento .  (31)

	.  reduce 31


state 82
	asignacion : expresion . '=' expresion ';'  (38)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' IDENTIFICADOR  (51)
	expresion : expresion . '%' expresion  (55)
	expresion : expresion . '>' expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . MAYORIGUAL expresion  (58)
	expresion : expresion . MENORIGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . IGUALDAD expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)

	AND  shift 96
	MAYORIGUAL  shift 97
	IGUALDAD  shift 98
	DISTINTO  shift 99
	OR  shift 100
	MENORIGUAL  shift 101
	'='  shift 102
	'<'  shift 103
	'>'  shift 104
	'+'  shift 105
	'-'  shift 106
	'/'  shift 107
	'*'  shift 108
	'%'  shift 109
	'['  shift 110
	'.'  shift 111
	.  error


state 83
	expresion : funcionExpresion .  (68)

	.  reduce 68


state 84
	programa : definiciones FUNC MAIN '(' ')' VOID '{' sentenciasCuerpo '}' .  (1)

	.  reduce 1


state 85
	write : WRITE '(' . expresiones ')' ';'  (32)

	CTE_ENTERA  shift 61
	CHAR  shift 63
	CTE_REAL  shift 64
	IDENTIFICADOR  shift 87
	INT  shift 38
	FLOAT32  shift 39
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	.  error

	tipoSimples  goto 73
	expresiones  goto 112
	expresion  goto 113
	funcionExpresion  goto 83

